# ThreeBarSolver

./: .gitignore  AGENTS.md  Cargo.toml  README.md  app.py  params.json  pyproject.toml  sol.json
app/: README.md
app/src/: config.rs  geometry.rs  lib.rs  linkage.rs  types.rs
app/src/app/: mod.rs  plot.rs  sidebar.rs  state.rs
app/src/optimization/: bounds.rs  mod.rs  packing.rs  residuals.rs  solver.rs
docs/: CodeReview240126.md
scripts/: 7bar.py  sevenbar.py  threebar.py
src/: config.rs  linkage.rs  main.rs  types.rs
src/app/: plot.rs  results.rs  sidebar.rs  state.rs
src/optimization/: bounds.rs  packing.rs  problem.rs  residuals.rs  solver.rs
utils/: AGENTS.md  README.md  pyproject.toml  solver.py.old
utils/robot2wheel_utils/: compute_lqr.py  geometry.py  kinematics.py  optimize.py  run.py  scoring.py  solver2.py  visualize.py
