[package]
name = "threebar-solver"
version = "0.1.0"
edition = "2021"
description = "3-Bar Linkage Designer with egui GUI"
license = "MIT"

[dependencies]
# GUI
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"

# Math & Optimization
nalgebra = { version = "0.33", features = ["serde-serialize"] }
argmin = "0.10"
argmin-math = { version = "0.4", features = ["vec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism & Random
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"

# Utilities
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
