[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Carjat",email = "ec@eugrowth.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry.scripts]
7bar = "scripts.sevenbar:main"
3bar = "scripts.threebar:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
